NEWS for the Gmisc package

Changes for 0.6.0.0
--------------------
* For LibreOffice compatibility htmlTable now includes caption inside the table when compatibility='LibreOffice'
* Split the package to exclude regression functions, these are now in the Greg package

Changes for 0.5.8.2
--------------------
* htmlTable caused too large colspans when cgroup was set

Changes for 0.5.8.1
--------------------
* Bugfixes for printC&A and getDesc.
* Added a pvalueFormatter
* Fixed Intercept bug for get/printCrudeAndAdjusted - didn't include the intercept term

Changes for 0.5.8.0
--------------------
* Added to forestplot2 ability create customly drawn confidence intervals/boxes
* Generated diamond, circle and point custom draw functions for forestplot2
* Added forestplot2 compatibility for the summary
* Minor bugfixes behind the scenes
* Fixed issue with getCrudeAndAdjustedModelData mixing up rows for rms objects

Changes for 0.5.7.11
-------------------
* Added tfoot option to the htmlTable function
* Switched to the proper caption-align for htmlTable
* Added options for htmlTable() where you now can format the table counter text and change to Arabic numerals.
* Bug: changed just to align for printCrudeAndAdjustedModel()

Changes for 0.5.7.10
-------------------
* Switched the order in the multi-line forestplot for the legend

Changes for 0.5.7.9
-------------------
* Bugfix for getTics so that it can handle small spans < .5

Changes for 0.5.7.8
-------------------
* Bugfix for forestplot2 with headers

Changes for 0.5.7.7
-------------------
* Added title for forestplot2
* Fixed the margins for forestplot2

Changes for 0.5.7.6
-------------------
* Added more legend border and fill options to the forestplot2
* Added the legend.title option in the forestplot2
* Fixed the auto-sizing of the area for the forestplot2
* Rows/elements with NA are now not included in the zero-line as they are considered to be headers

Changes for 0.5.7.5
-------------------